[package]
name = "nfilesync"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simd-adler32 = "0.3.4"
vsdbsled = "0.34.7-p1"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[dependencies.config]
version = "0.13.1"
default-features = false
features = [
    "toml", #use only toml
]
